# PickleOS

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  x86_64-pickleos.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUDIT_2026-06-27.md  AUDIT_AND_ROADMAP.md  COMPLETE_OS_STATUS.md  COMPLETION_STATUS.md  DISPLAY_SERVER_ARCHITECTURE.md  FINAL_STATUS.md  NETWORKING.md  PHASE2_DESIGN.md  PHASE2_INTERRUPT_ATTEMPT.md  PHASE2_STATUS.md  PHASE3_STATUS.md  PRODUCTION_ROADMAP.md  ROADMAP.md  SESSION_PROGRESS.md
kernel/: Cargo.toml
kernel/src/: allocator.rs  capability.rs  elf.rs  framebuffer.rs  gdt.rs  gui.rs  init_user.rs  interrupts.rs  ipc.rs  main.rs  memory.rs  serial.rs  shell.rs  signal.rs  syscall.rs  task.rs  terminal.rs  userprogs.rs  vga_buffer.rs  wm.rs
kernel/src/driver/: ahci.rs  block.rs  console.rs  dma.rs  e1000.rs  irq.rs  keyboard.rs  mmio.rs  mod.rs  mouse.rs  pci.rs  portio.rs  timer.rs
kernel/src/fs/: mod.rs  nextfs.rs  vfs.rs
kernel/src/net/: demo.rs  mod.rs  stack.rs
kernel/src/services/: init.rs  memfs.rs  mod.rs  registry.rs  vfs.rs
scripts/: debug-qemu.sh  gui_colors_check.py  gui_multiterm_test.py  gui_phase1_test.py  gui_term_edit_test.py  gui_term_test.py  gui_term_test_nodisk.py  kbd_diag.py  kbd_diag_disks.py  run-qemu.sh  test-boot.sh
userspace/: Makefile  args_test.c  calculator.c  fork_test.c  hello.c  net_test.c  pid_test.c  pie_test.c  pipe_test.c  signal_test.c  stdio_test.c  test_lib.c  user.ld  user_pie.ld
userspace/filemanager/: Cargo.toml
userspace/filemanager/src/: main.rs
userspace/launcher/: Cargo.toml  build.rs
userspace/launcher/src/: main.rs
userspace/libpickleos/: Cargo.toml
userspace/libpickleos/src/: capability.rs  font.rs  gui.rs  ipc.rs  lib.rs  memory.rs  process.rs  socket.rs  syscall.rs  widgets.rs
userspace/taskbar/: Cargo.toml
userspace/taskbar/src/: main.rs
userspace/texteditor/: Cargo.toml
userspace/texteditor/src/: main.rs
